--- a/src/main/resources/templates/lecture/lecture_view.html
+++ b/src/main/resources/templates/lecture/lecture_view.html
@@ -8,11 +8,32 @@
 </head>
 <body>
     <th:block th:insert="~{pagefragments.html :: header}"> </th:block>
+    <table id="lecture_header_block">
+    <tr>
+    <td>
+    <h3><a th:href="@{/course/{id}(id=${course.id})}" th:text="${course.name}"></a></h3>
+    </td>
+    </tr>
+    </table>
+        
     <table style="width:100%; height:100%">
     <tr>
+    <td valign="top" style="width: 20%;">
+        <p style="font-weight: bold;" th:text="#{header.contents}"></p>
+    <th:block th:each="unit : ${chapters}">
+            <p><b>
+                <a th:href="@{/unit/{id}(id=${unit.id})}" th:text="${unit.name}">UNIT</a>
+            </b></p>
+            <ul>
+            <th:block th:each="lec : ${unit.lectures}">
+                <p>
+                    <a th:href="@{/lecture/{id}(id=${lec.id})}" th:text="${lec.name}">LECTURE</a>
+                </p>
+            </th:block>
+            </ul>
+        </th:block>
+    </td>
     <td valign="top" style="width:90%;">
-	    <h1><a th:href="@{/course/{id}(id=${course.id})}" th:text="${course.name}"></a></h1>
-	    
 	    <h2 th:text="${chapter.name}"></h2>
 	    
 	    <h3 th:text="${lecture.name}"></h3>
