--- a/src/main/resources/templates/categorytreefragment.html
+++ b/src/main/resources/templates/categorytreefragment.html
@@ -5,7 +5,9 @@
     <ul>
         <li th:each="cat : ${categories}">
             <a th:href="@{/category/{id}(id=${cat.value.id})}" th:text="${cat.value.name}">CATEGORY NAME</a>
+            <th:block th:if="${editCategoryEnabled}">
             <a th:href="@{/category/edit/{id}(id=${cat.value.id})}"><img th:alt="#{edit}" th:title="#{edit}" th:src="@{/static/images/edit.png}" /></a>
+            </th:block>
             <section th:insert="~{@{categorytreefragment} :: category}" th:with="categories=${cat.items}"></section>
         </li>
     </ul>
