--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,6 +12,9 @@
     <tr>
         <td valign="top" style="white-space:nowrap;border-right:1px black dotted;padding:5px;">
 	    <h3 th:text="#{header.catalog}"></h3>
+	    <th:block th:if="${editCategoryEnabled}">
+	    <p><a th:href="@{/category/add}" th:text="#{category.add}">ADD CATEGORY</a></p>
+	    </th:block>
 	     <section th:insert="~{@{categorytreefragment} :: category}" th:with="maincategories=${categories}"></section>
         </td>
         <td valign="top" style="width:90%;padding:5px;">
