--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,28 +1,52 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org">
+    xmlns:th="http://www.thymeleaf.org"
+    xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-<meta charset="UTF-8">
-<title>Volumen - Login</title>
-<link rel="stylesheet" th:href="@{/styles.css}" />
+<title th:text="#{login}"></title>
+<th:block th:insert="~{pagefragments.html :: pagehead}"> </th:block>
 </head>
 <body>
-	<h1>Login</h1>
-	<div th:if="${param.error}">
-            Invalid username and password.</div>
-    <div th:if="${param.logout}">
-        You have been logged out.</div>
-	<div th:if="${error}">Unable to login. Check your user name and password.</div>
+    <th:block th:insert="~{pagefragments.html :: header}"> </th:block>
 	
-	<p>New here? Click <a th:href="@{/register}">here</a> to register.</p>
 	<form method="post" th:action="@{/login}" id="loginForm">
-		<label for="username">Username: </label>
-		<input type="text" name="username" /><br/>
-		
-		<label for="password">Password: </label>
-		<input type="password" name="password" /><br/>
-		
-		<input type="submit" value="Login" />
-	</form>
+	<table width="100%">
+	   <tr>
+	       <td width="33%">
+	       </td>
+	       <td width="33%" align="center">
+			    <h1 th:text="#{login}"></h1>
+			    <div th:if="${param.error}">
+			            Invalid username and password.</div>
+			    <div th:if="${param.logout}">
+			        You have been logged out.</div>
+			    <div th:if="${error}">Unable to login. Check your user name and password.</div>
+			    <table>
+			       <tr>
+			           <td><label for="username" th:text="#{username}">Username: </label></td>
+			           <td><input type="text" name="username" /></td>
+			       </tr>
+			       <tr>
+			           <td><label for="password" th:text="#{password}">Password: </label></td>
+			           <td><input type="password" name="password" /></td>
+			       </tr>
+			       <tr>
+			         <td></td>
+			         <td><input type="checkbox" name="remember-me" id="remember-me" />
+			         <label for="remember-me" th:text="#{rememberme}">REMEMBER ME</label> </td>
+			       </tr>
+			       <tr>
+			           <td></td>
+			           <td><input type="submit" th:value="#{do.login}" /></td>
+			       </tr>
+			    </table>
+			    <p><a th:href="@{/register}" th:text="#{register}">here</a></p>
+           </td>
+	       <td width="33%">
+           </td>
+	   </tr>
+	</table>
+    </form>
+	<th:block th:insert="~{pagefragments.html :: footer}"> </th:block>
 </body>
 </html>
