--- a/src/main/resources/templates/category/category_add.html
+++ b/src/main/resources/templates/category/category_add.html
@@ -20,7 +20,7 @@
 		<table>
 			<tr>
 				<td><label th:text="#{category.name}"></label></td>
-				<td><input type="text" id="category_name" name="category_name" th:field="*{name}" />
+				<td><input type="text" id="category_name" name="category_name" th:field="*{name}" style="width:97%" />
 				<span class="error" th:text="${requiredError}"></span></td>
 			</tr>
             <tr>
