--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
     <th:block th:insert="~{pagefragments.html :: header}"> </th:block>
 	
 	<form method="post" th:action="@{/login}" id="loginForm">
-	<table width="100%">
+	<table style="width:100%">
 	   <tr>
 	       <td width="33%">
 	       </td>
