--- a/src/main/resources/templates/lecture/lecture_view.html
+++ b/src/main/resources/templates/lecture/lecture_view.html
@@ -8,61 +8,73 @@
 </head>
 <body>
     <th:block th:insert="~{pagefragments.html :: header}"> </th:block>
-    <table id="lecture_header_block">
-    <tr>
-    <td>
-    <h3><a th:href="@{/course/{id}(id=${course.id})}" th:text="${course.name}"></a></h3>
-    </td>
-    </tr>
-    </table>
-        
-    <table style="width:100%; height:100%">
-    <tr>
-    <td valign="top" style="width: 20%;">
-        <p style="font-weight: bold;" th:text="#{header.contents}"></p>
-    <th:block th:each="unit : ${chapters}">
-            <p><b>
-                <a th:href="@{/unit/{id}(id=${unit.id})}" th:text="${unit.name}">UNIT</a>
-            </b></p>
-            <ul>
-            <th:block th:each="lec : ${unit.lectures}">
-                <p>
-                    <a th:href="@{/lecture/{id}(id=${lec.id})}" th:text="${lec.name}">LECTURE</a>
-                </p>
-            </th:block>
-            </ul>
-        </th:block>
-    </td>
-    <td valign="top" style="width:90%;">
-	    <h2 th:text="${chapter.name}"></h2>
-	    
-	    <h3 th:text="${lecture.name}"></h3>
-	
-	    <div><th:block th:utext="${lecture.description}" /> </div>
-	    
-	    <div><th:block th:utext="${lectureContent}" /> </div>
-	    
-	    <th:block th:if="${lecture.lectureTest != null}">
-	        <p><a th:href="@{/runtest/lecture/{lectureId}(lectureId=${lecture.id})}" th:text="#{test.run}">RUN LECTURE TEST</a></p>
-	    </th:block>
-    </td>
-    <td valign="top">
-	    <div id="page-management-menu">
-	    <p style="white-space:nowrap;"><b th:text="#{header.content_management}"></b></p>
-	    <p><a th:href="@{/course/edit/{id}(id=${course.id})}" th:text="#{course.edit}">EDIT COURSE</a></p>
-	    <p><a th:href="@{/unit/{id}(id=${chapter.id})}" th:text="#{unit.create}"></a></p>
-	    <p><a th:href="@{/unit/edit/{id}(id=${chapter.id})}" th:text="#{chapter.edit}">EDIT CHAPTER</a></p>
-	    <p><a th:href="@{/lecture/add/{id}(id=${chapter.id})}" th:text="#{lecture.add}">ADD LECTURE</a></p>
-	    <p><a th:href="@{/lecture/edit/{id}(id=${lecture.id})}" th:text="#{lecture.edit}"></a></p>
-	    <th:block th:if="${lecture.lectureTest == null}">
-	        <p><a th:href="@{/test/add/{id}(id=${lecture.id})}" th:text="#{lecture.add_test}">ADD TEST</a></p>
-	    </th:block>
-	    <th:block th:if="${lecture.lectureTest != null}">
-	        <p><a th:href="@{/test/edit/{id}(id=${lecture.lectureTest.id})}" th:text="#{lecture.edit_test}">EDIT TEST</a></p>
-	    </th:block>
-	    </div>
-    </td>
-    </tr>
+	<table id="lecture_header_block">
+		<tr>
+			<td>
+				<h3>
+					<a th:href="@{/course/{id}(id=${course.id})}"
+						th:text="${course.name}"></a>
+				</h3>
+			</td>
+		</tr>
+	</table>
+
+	<table style="width:100%; height:100%">
+        <tr>
+			<td valign="top" style="width: 20%;">
+				<p style="font-weight: bold;" th:text="#{header.contents}"></p> <th:block
+					th:each="unit : ${chapters}">
+					<p>
+						<b> <a th:href="@{/unit/{id}(id=${unit.id})}"
+							th:text="${unit.name}">UNIT</a>
+						</b>
+					</p>
+					<ul>
+						<th:block th:each="lec : ${unit.lectures}">
+							<p>
+								<a th:href="@{/lecture/{id}(id=${lec.id})}"
+									th:text="${lec.name}">LECTURE</a>
+							</p>
+						</th:block>
+					</ul>
+				</th:block>
+			</td>
+			<td valign="top" style="width:90%;">
+	            <h2 th:text="${chapter.name}"></h2>
+
+				<h3 th:text="${lecture.name}"></h3>
+
+				<div>
+					<th:block th:utext="${lecture.description}" />
+				</div>
+
+				<div>
+					<th:block th:utext="${lectureContent}" />
+				</div> <th:block th:if="${lecture.lectureTest != null}">
+					<p>
+						<a
+							th:href="@{/runtest/lecture/{lectureId}(lectureId=${lecture.id})}"
+							th:text="#{test.run}">RUN LECTURE TEST</a>
+					</p>
+				</th:block>
+			</td>
+		    <td valign="top">
+			    <div id="page-management-menu">
+			    <p style="white-space:nowrap;"><b th:text="#{header.content_management}"></b></p>
+			    <p><a th:href="@{/course/edit/{id}(id=${course.id})}" th:text="#{course.edit}">EDIT COURSE</a></p>
+			    <p><a th:href="@{/unit/{id}(id=${chapter.id})}" th:text="#{unit.create}"></a></p>
+			    <p><a th:href="@{/unit/edit/{id}(id=${chapter.id})}" th:text="#{chapter.edit}">EDIT CHAPTER</a></p>
+			    <p><a th:href="@{/lecture/add/{id}(id=${chapter.id})}" th:text="#{lecture.add}">ADD LECTURE</a></p>
+			    <p><a th:href="@{/lecture/edit/{id}(id=${lecture.id})}" th:text="#{lecture.edit}"></a></p>
+			    <th:block th:if="${lecture.lectureTest == null}">
+			        <p><a th:href="@{/test/add/{id}(id=${lecture.id})}" th:text="#{lecture.add_test}">ADD TEST</a></p>
+			    </th:block>
+			    <th:block th:if="${lecture.lectureTest != null}">
+			        <p><a th:href="@{/test/edit/{id}(id=${lecture.lectureTest.id})}" th:text="#{lecture.edit_test}">EDIT TEST</a></p>
+			    </th:block>
+			    </div>
+		    </td>
+        </tr>
     </table>
     
     
